--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "repository": "https://github.com/octoposprime/op-fe-shared.git",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "eslint": "^8.57.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
