--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "scripts": {
     "test": "ts-node test.ts",
     "build": "npx tsc"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "graphql-request": "^6.1.0",
+    "react-native": "^0.73.6"
   }
 }
