--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "./dist",
-      "strict": true
+      "strict": true,
+      "skipLibCheck": true
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "dist"]
